methods.slug.SlugHunting.scala.error
Compilation error:
SlugHunting:3: error: not found: value FacingTrail
while (!isOverBaggle()) {while (!FacingTrail()) {right()}; forward()}
                                 ^